--- a/catalog/view/theme/d_visualize/template/account/password.twig
+++ b/catalog/view/theme/d_visualize/template/account/password.twig
@@ -5,24 +5,25 @@
       <form action="{{action}}" method="post" enctype="multipart/form-data" class="form-horizontal">
         <fieldset>
           <legend>{{text_password}}</legend>
-          <div class="form-group required">
-            <label class=" field-label label-right-md" for="input-password"><span>{{entry_password}}</span></label>
-            <div class="pwd-wrap">
-              <input type="password" name="password" value="{{password}}" id="input-password" class="field" />
-              {% if error_password %}
-              <div class="text-danger">{{error_password}}</div>
-              {% endif %}
-            </div>
-          </div>
-          <div class="form-group required">
-            <label class="field-label label-right-md" for="input-confirm"><span>{{entry_confirm}}</span></label>
-            <div class="pwd-c-wrap">
-              <input type="password" name="confirm" value="{{confirm}}" id="input-confirm" class="field" />
-              {% if error_confirm %}
-              <div class="text-danger">{{error_confirm}}</div>
-              {% endif %}
-            </div>
-          </div>
+            {% include partial.form_group.template with partial.form_group|merge({
+            type:'password',
+            id:'input-password',
+            name:'password',
+            value:password,
+            placeholder:entry_password,
+            classes:'',
+            text_input:entry_password,
+            }) %}
+            {% include partial.form_group.template with partial.form_group|merge({
+            type:'password',
+            id:'input-confirm',
+            name:'confirm',
+            value:password,
+            placeholder:entry_confirm,
+            classes:'',
+            text_input:entry_confirm,
+            }) %}
+
         </fieldset>
           {% include partial.d_button_submit.template with  partial.d_button_submit %}
       </form>
