--- a/admin/view/template/extension/module/d_visualize.twig
+++ b/admin/view/template/extension/module/d_visualize.twig
@@ -46,7 +46,14 @@
                     </div>
                 </div>
                 <div class="panel-body">
-
+                    {{tabs}}
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div id="visualize">
+                                <visualize></visualize>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </form>
         </div>
@@ -54,6 +61,9 @@
 
 </div>
 
+{% for vueTemplate in vueTemplates  %}
+    {{ content(vueTemplate,'vue') }}
+{% endfor %}
 <script type="text/javascript">
 	$(function () {
 		$("[type='checkbox']").bootstrapSwitch({
