--- a/catalog/view/theme/d_visualize/template/component/button/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/button/default.twig
@@ -23,6 +23,7 @@
             {% endif %}
             title="{{ title_button }}"
             data-loading-text="{{ text_loading }}"
+            {{ custom }}
     >{{ text_button|raw }}</button>
 {% elseif link %}
     <a href="{{ link }}"
@@ -33,3 +34,4 @@
        data-loading-text="{{ text_loading }}"
     >{{ text_button|raw }}</a>
 {% endif %}
+
