--- a/catalog/view/theme/d_visualize/template/component/d_account_field/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_account_field/default.twig
@@ -1,51 +1,43 @@
-<!-- > d_account_field_default -->
+<!-- > d_account_field_jag -->
 {% if customer_groups %}
-<div class="form-group required" style="display: {% if customer_groups|length > 1 %}block{% else %}none{% endif %};">
-  <label class="{% if form %}col-sm-2{% endif %} field-label label-right-md"><span>{{entry_customer_group}}</span></label>
-  <div class="{% if form %}col-sm-10{% endif %}">
-    {% for customer_group in customer_groups %}
-    <div class="radio">
-      <label>
-    <input type="radio" name="customer_group_id" value="{{customer_group.customer_group_id}}" {% if customer_group.customer_group_id == customer_group_id %}checked="checked"{% endif %} />
-        <span>{{customer_group.name}}</span></label>
+    <div class="form-group required" style="display: {% if customer_groups|length > 1 %}block{% else %}none{% endif %};">
+        <label class="{% if form %}col-sm-2{% endif %} field-label label-right-md"><span>{{entry_customer_group}}</span></label>
+        <div class="{% if form %}col-sm-10{% endif %}">
+            {% for customer_group in customer_groups %}
+                <div class="radio">
+                    <label>
+                        <input type="radio" name="customer_group_id" value="{{customer_group.customer_group_id}}" {% if customer_group.customer_group_id == customer_group_id %}checked="checked"{% endif %} />
+                        <span>{{customer_group.name}}</span></label>
+                </div>
+            {% endfor %}
+        </div>
     </div>
-    {% endfor %}
-  </div>
+{% endif %}
+{% include partial.d_name_field.template with  partial.d_name_field|merge({form:form}) %}
+<div class="form-group required">
+    <label class="{% if form %}col-sm-2{% endif %} field-label label-right-md" for="input-email"><span>{{entry_email}}</span></label>
+    <div class="{% if form %}col-sm-10{% endif %}">
+        <input type="text" name="email" value="{{email}}" id="input-email" class="field form-control" />
+        {% if error_email %}
+            <div class="text-danger">{{error_email}}</div>
+        {% endif %}
+    </div>
 </div>
-{% endif %}
-{% include partial.d_name_field.template with  partial.d_name_field %}
- {% include partial.form_group.template with partial.form_group|merge({
- type:'email',
- id:'input-email',
- name:'email',
- requier:true,
- value:email,
- classes:'',
- placeholder:entry_email,
- text_input:entry_email,
- }) %}
- {% include partial.form_group.template with partial.form_group|merge({
- type:'text',
- id:'input-telephone',
- name:'telephone',
- required: true,
- value:telephone,
- placeholder:entry_telephone,
- classes:'',
- text_input:entry_telephone,
- error:error_telephone,
- }) %}
+<div class="form-group required">
+    <label class="{% if form %}col-sm-2{% endif %} field-label label-right-md" for="input-telephone"><span>{{entry_telephone}}</span></label>
+    <div class="{% if form %}col-sm-10{% endif %}">
+        <input type="text" name="telephone" value="{{telephone}}" id="input-telephone" class="field form-control" />
+        {% if error_telephone %}
+            <div class="text-danger">{{error_telephone}}</div>
+        {% endif %}
+    </div>
+</div>
 {% if constant('VERSION') < '3.0.0.0' %}
-    {% include partial.form_group.template with partial.form_group|merge({
-    type:'text',
-    id:'input-fax',
-    name:'fax',
-    required: true,
-    value:fax,
-    placeholder:entry_fax,
-    classes:'',
-    text_input:entry_fax,
-    error:error_fax,
-    }) %}
+    <div class="form-group">
+        <label class="{% if form %}col-sm-2{% endif %} field-label label-right-md" for="input-fax"><span>{{entry_fax}}</span></label>
+        <div class="{% if form %}col-sm-10{% endif %}">
+            <input type="text" name="fax" value="{{fax}}" id="input-fax" class="field form-control" />
+        </div>
+    </div>
 {% endif %}
-<!-- /> d_account_field_default -->
+<!-- /> d_account_field_jag -->
