--- a/catalog/view/theme/d_visualize/template/component/d_breadcrumb/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_breadcrumb/default.twig
@@ -1,13 +1,19 @@
 <!-- > d_breadcrumb -->
-<div class="container">
-        <div class="row">
-                <div class="col-sm-12">
-                        <ul class="breadcrumb">
-                            {% for breadcrumb in breadcrumbs %}
-                                    <li><a href="{{breadcrumb.href}}">{{breadcrumb.text}}</a></li>
-                            {% endfor %}
-                        </ul>
-                </div>
+<div class="row">
+        <div class="col-md-12">
+                <ul class="breadcrumb">
+                    {% set count = 0 %}
+
+                    {% for breadcrumb in breadcrumbs %}
+                        {% set count = count + 1 %}
+
+                        {% if count == breadcrumbs|length %}
+                                <li>{{breadcrumb.text}}</li>
+                        {% else %}
+                                <li><a href="{{breadcrumb.href}}">{{breadcrumb.text}}</a></li>
+                        {% endif %}
+                    {% endfor %}
+                </ul>
         </div>
 </div>
 <!-- /> d_breadcrumb -->
