--- a/catalog/view/theme/d_visualize/template/component/d_review/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_review/default.twig
@@ -1,56 +1,60 @@
 {% if review_status %}
-    <div id="reviews" class="comments-section">
-        <h2 class="like-heading-h5">Reviews</h2>
+    <div class="tab-pane" id="tab-review">
         <form class="form-horizontal" id="form-review">
-            <div id="review" class="comments-list"></div>
-            <div id="new-comment" class="new-comment">
-                <h3 class="like-heading-h2">{{ text_write }}</h3>
-                {% if review_guest %}
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="form-group required">
-                            <div class="col-sm-12">
-                                <label class="field-label label-fluid"
-                                       for="input-name">{{ entry_name }}</label>
-                                <input type="text" name="name" value="" id="input-name"
-                                       class="field"/>
+            <div id="review"></div>
+            <!-- Button trigger modal -->
+            {% if review_guest %}
+                <button type="button"  data-loading-text="{{ text_loading }}" class="btn d-vis btn-primary"
+                        data-toggle="modal" data-target="#write_review_modal">{{ text_write }}</button>
+                <!-- Modal -->
+                <div class="modal fade" id="write_review_modal" tabindex="-1" role="dialog" aria-labelledby="">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                            aria-hidden="true">&times;</span></button>
+                                <h2 class="modal-title">{{ text_write }}</h2>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="form-group required">
-                            <div class="col-sm-12">
-                                <label class="field-label label-fluid"><span>{{ entry_rating }}</span></label>
-                                <div class="rating">
-                                    <input type="hidden" id="review_rating" name="rating" data-start="0"
-                                           data-stop="5"
-                                           data-filled="fas fa-star"
-                                           data-empty="fas empty fa-star">
+                            <div class="modal-body">
+                                <div class="form-group required">
+                                    <div class="col-sm-12">
+                                        <label class="control-label" for="input-name">{{ entry_name }}</label>
+                                        <input type="text" name="name" value="{{ customer_name }}" id="input-name"
+                                               class="form-control"/>
+                                    </div>
+                                </div>
+                                <div class="form-group required">
+                                    <div class="col-sm-12">
+                                        <label class="control-label" for="input-review">{{ entry_review }}</label>
+                                        <textarea name="text" rows="5" id="input-review"
+                                                  class="form-control"></textarea>
+                                        <div class="help-block">{{ text_note }}</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal-footer d-flex justify-content-end align-items-center">
+                                <div class="review_rating_wrap">
+                                    {% include partial.d_rating.template with partial.d_rating %}
+                                </div>
+                                {{ captcha }}
+                                <div class="buttons clearfix">
+                                    <div class="pull-right">
+                                        {% include partial.button.template with partial.button|merge({
+                                        button: true,
+                                        id:'button-review',
+                                        style:'primary',
+                                        text_button:button_continue,
+                                        }) %}
+                                        {#<button type="button" id="button-review" data-loading-text="{{ text_loading }}"#}
+                                        {#class="btn btn-vis btn-primary">{{ button_continue }}</button>#}
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="form-group required">
-                    <div class="col-sm-12">
-                        <label class="field-label label-fluid"
-                               for="input-review"><span>{{ entry_review }}</span></label>
-                        <textarea name="text" rows="5" id="input-review"
-                                  class="field field-area"></textarea>
-                        <div class="help-block">{{ text_note }}</div>
-                    </div>
-                </div>
-                {{ captcha }}
-                <div class="buttons clearfix">
-                    <div class="pull-right">
-                        <button type="button" id="button-review"
-                                data-loading-text="{{ text_loading }}"
-                                class="btn btn-primary">{{ button_send }}</button>
-                    </div>
-                </div>
-            </div>
             {% else %}
-                {{ text_login }}
+
             {% endif %}
         </form>
     </div>
