--- a/catalog/view/theme/d_visualize/template/component/product_category/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/product_category/default.twig
@@ -1,12 +1,21 @@
-{{ description }}
-<h3 class="heading-h3">{{ heading_title }}</h3>
-{% include partial.d_product_list.template with  partial.d_product_list %}
+<div id="product-category" >
+    <h1 class="heading-h1">{{ heading_title }}</h1>
+    {% include partial.d_product_list.template with  partial.d_product_list %}
     {% if not categories %}
         {% if not products %}
             <p>{{ text_empty }}</p>
             <div class="buttons">
-                <div class="pull-right"><a href="{{ continue }}" class="btn btn-primary"
-                                           data-loading-text="{{ text_loading }}">{{ button_continue }}</a></div>
+                <div class="pull-right">
+                    {% include component.button.template with({
+                    link:continue,
+                    style:'primary',
+                    text_button:button_continue
+                    }) %}
+
+                </div>
             </div>
         {% endif %}
     {% endif %}
+</div>
+
+
