add admin with vuejs; add validation on catalog;

--- a/admin/view/stylesheet/d_visualize/_config.scss
+++ b/admin/view/stylesheet/d_visualize/_config.scss
@@ -14,22 +14,14 @@ $color-success-darkenx2: #4faf68;
 $color-danger: #cf4949;
 $color-danger-darken: #da3d3d;
 $color-danger-darkenx2: #bc3a3a;
-//
-//$color--tree: #f0b840;
-//$color--tree-darken: #eba612;
-//$color--tree-darkenx2: #d59202;
-///
-//color-
-//
-//$color-: #cfcfcf;
-//$color--darken: #b1b1b1;
-//$color--darkenx2: #959595;
-///
-//color-
-//
-//$color-: #d9dcec;
-//$color--darken: #c6cce4;
-//$color-: #abb2d8;
+// info
+$color-info: #f0b840;
+$color-info-darken: #eba612;
+$color-info-darkenx2: #d59202;
+//color-success
+$color-success: #cfcfcf;
+$color-success-darken: #b1b1b1;
+$color-success-darkenx2: #959595;
 
 // main
 $color-main: $p_black;
