--- a/admin/view/stylesheet/d_visualize/component/_loader.scss
+++ b/admin/view/stylesheet/d_visualize/component/_loader.scss
@@ -1,9 +1,21 @@
-.loader{
-  position: absolute;
+.loader {
+  .la-timer {
+    color: $color-main;
+  }
+  &.normal {
+    position: absolute;
+  }
+  &.auto-saving {
+    display: none;
+    &.mini {
+      display: inline-block;
+    }
+  }
 }
-&.loading > .container-fluid {
-  .panel{
-    opacity:.5;
+
+.loading > .container-fluid:not(.auto-saving) {
+  .panel {
+    opacity: .5;
     pointer-events: none;
     flex: 1 1 100%;
     width: 100%;
@@ -12,6 +24,20 @@
   align-items: center;
   justify-content: center;
 }
-.panel-body{
-  min-height:500px;
+
+.panel-body {
+  min-height: 500px;
 }
+
+.sync-loader {
+  flex: 1;
+  margin-left: rem(20);
+  .fa {
+    font-size: 36px;
+  }
+}
+
+.auto-saving .panel .panel-heading {
+  justify-content: space-between;
+}
+
