--- a/admin/view/stylesheet/d_visualize/component/_home.scss
+++ b/admin/view/stylesheet/d_visualize/component/_home.scss
@@ -1,3 +1,8 @@
 .vis-home{
-  display: flex;
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+  grid-gap: 10px;
+  @media (--tablet) {
+    background: red;
+  }
 }
