--- a/admin/view/stylesheet/d_visualize/elements/_auto_save_switch.scss
+++ b/admin/view/stylesheet/d_visualize/elements/_auto_save_switch.scss
@@ -1,8 +1,8 @@
 .auto-save{
   .custom-switch{
-    color: $p_black;
+    color: var(--p_black);
     &.active{
-      color: $color-info;
+      color: var(--color-info);
     }
   }
 
