--- a/admin/view/stylesheet/d_visualize/components/_template-thumb.scss
+++ b/admin/view/stylesheet/d_visualize/components/_template-thumb.scss
@@ -1,10 +1,9 @@
 .vis-template-thumb{
-  padding: $default-padding;
+  padding: 20px;
   max-width: 250px;
-  &:not(:last-child()){
-    margin-right:  rem(20);
+  &:not(:last-child){
+    margin-right:  20px;
   }
-
   &.active{
     outline: 1px solid red;
   }
