--- a/admin/view/stylesheet/d_visualize/d_visualize.pcss
+++ b/admin/view/stylesheet/d_visualize/d_visualize.pcss
@@ -1,8 +1,8 @@
-/**
- * color
- */
-@import "config.css";
+
+@import "_config.scss";
 .visualize{
   @import "common/_import.scss";
 }
 @import "component/_import.scss";
+@import "components/_import.scss";
+@import "page/_import.scss";
