--- a/admin/view/stylesheet/d_visualize/_config.scss
+++ b/admin/view/stylesheet/d_visualize/_config.scss
@@ -1,10 +1,7 @@
-/**
- * http://chir.ag/projects/name-that-color
- * color
- */
+@import "base/import";
 
 :root {
-  --color-primary: #4fb5e7;
+  --color-primary: $blue;
   --color-primary-darken: #27b7fd;
   --color-primary-darkenx2: #1589c1;
   --color-success: #86ce99;
@@ -19,9 +16,6 @@
   --color-default: #cfcfcf;
   --color-default-darken: #b1b1b1;
   --color-default-darkenx2: #959595;
-  /**
-   * Font
-   */
   --font-main: 'Roboto';
   --font-secondary: 'Blogger Sans';
   --font-secondary-bold: 'Blogger Sans Bold';
@@ -30,12 +24,19 @@
   --font-normal: 400;
   --font-medium: 500;
   --font-bold: 600;
-  --font-size-base: 0.9375rem;
-  --font-size-h1: 2.9375rem;
-  --font-size-h2: 2.1875rem;
-  --font-size-h3: 1.625rem;
-  --font-size-h4: 1.25rem;
-  --font-size-h5: 1.125rem;
+  --font-size-h1: 35px;
+  --font-size-h2: 28px;
+  --font-size-h3: 25px;
+  --font-size-h4: 20px;
+  --font-size-h5: 18px;
 }
 
-/*# sourceMappingURL=config.css.map */
+@media(--tablet) {
+  :root {
+    --font-size-h1: 28px;
+    --font-size-h2: 24px;
+    --font-size-h3: 22px;
+    --font-size-h4: 20px;
+    --font-size-h5: 18px;
+  }
+}
