--- a/admin/view/stylesheet/d_visualize/component/_home.scss
+++ b/admin/view/stylesheet/d_visualize/component/_home.scss
@@ -1,8 +1,5 @@
-.vis-home{
-  display: grid;
-  grid-template-columns: 100px 100px 100px;
-  grid-gap: 10px;
-  @media (--tablet) {
-    background: red;
+.vis-home {
+  > * {
+    lost-column: 1/4  ;
   }
 }
