add some logic on admin

--- a/admin/view/stylesheet/d_visualize/components/_dashboard.scss
+++ b/admin/view/stylesheet/d_visualize/components/_dashboard.scss
@@ -1,4 +1,4 @@
-.vis-template-thumb {
+.vz-template-thumb {
   padding: 20px;
   max-width: 250px;
   &:not(:last-child) {
@@ -8,7 +8,8 @@
     outline: 1px solid red;
   }
 }
-.vis-theme-preview {
+
+.vz-theme-preview, .vz-theme-thumbs {
   display: flex;
   > div {
     padding-top: 30px;
