--- a/catalog/view/theme/d_visualize/template/component/d_rating/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_rating/default.twig
@@ -4,7 +4,8 @@
             {% if static_rating %} data-readonly{% endif %}>
 </div>
 <script>
-
+$(document).ready(function () {
 	$('input[name=\'rating\']').rating();
+})
 
 </script>
