--- a/catalog/view/theme/d_visualize/template/component/d_breadcrumb/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_breadcrumb/default.twig
@@ -1,19 +1,21 @@
 <!-- > d_breadcrumb -->
-<div class="row">
+<div class="container-fluid">
+    <div class="row">
         <div class="col-md-12">
-                <ul class="breadcrumb">
-                    {% set count = 0 %}
+            <ul class="breadcrumb">
+                {% set count = 0 %}
 
-                    {% for breadcrumb in breadcrumbs %}
-                        {% set count = count + 1 %}
+                {% for breadcrumb in breadcrumbs %}
+                    {% set count = count + 1 %}
 
-                        {% if count == breadcrumbs|length %}
-                                <li>{{breadcrumb.text}}</li>
-                        {% else %}
-                                <li><a href="{{breadcrumb.href}}">{{breadcrumb.text}}</a></li>
-                        {% endif %}
-                    {% endfor %}
-                </ul>
+                    {% if count == breadcrumbs|length %}
+                        <li>{{ breadcrumb.text }}</li>
+                    {% else %}
+                        <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
         </div>
+    </div>
 </div>
 <!-- /> d_breadcrumb -->
